--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
@@ -34,33 +34,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="80dp"
                 android:layout_marginEnd="16dp" >
 
                 <EditText
                     android:id="@+id/edtxt_firstname"
-                    android:layout_width="120dp"
+                    android:layout_width="150dp"
                     android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="16dp"
                     android:ems="10"
                     android:importantForAutofill="no"
                     android:inputType="text"/>
 
                 <EditText
                     android:id="@+id/edtxt_lastname"
-                    android:layout_width="120dp"
+                    android:layout_width="150dp"
                     android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="16dp"
                     android:ems="10"
                     android:importantForAutofill="no"
                     android:inputType="text"/>
 
             </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/txtResult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="16dp"
+                android:gravity="center_horizontal"
+                android:text="@string/txt_result"
+                android:textAllCaps="true"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
 
 
@@ -70,11 +79,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="120dp"
                 android:layout_marginEnd="16dp" >
 
                 <com.beardedhen.androidbootstrap.BootstrapButton
-                    android:id="@+id/btnCalcular"
+                    android:id="@+id/btnCalculate"
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_margin="8dp"
@@ -86,7 +95,7 @@
                     app:roundedCorners="true" />
 
                 <com.beardedhen.androidbootstrap.BootstrapButton
-                    android:id="@+id/btnLimpar"
+                    android:id="@+id/btnSave"
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_margin="8dp"
@@ -98,7 +107,7 @@
                     app:roundedCorners="true" />
 
                 <com.beardedhen.androidbootstrap.BootstrapButton
-                    android:id="@+id/btnSave"
+                    android:id="@+id/btnClear"
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_margin="8dp"
@@ -112,7 +121,7 @@
             </LinearLayout>
 
             <com.beardedhen.androidbootstrap.BootstrapButton
-                android:id="@+id/btnFinalizar"
+                android:id="@+id/btnExit"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
