--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
@@ -30,30 +30,39 @@
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_launcher_round"
+                android:layout_marginTop="48dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="16dp" >
 
                 <EditText
-                    android:id="@+id/edtxt_firstname"
+                    android:id="@+id/edtxt_gasolina"
                     android:layout_width="150dp"
                     android:layout_height="48dp"
+                    android:layout_marginEnd="40dp"
                     android:ems="10"
                     android:importantForAutofill="no"
-                    android:inputType="text"/>
+                    android:hint="@string/txt_hint_gasolina"
+                    android:inputType="numberDecimal"/>
 
                 <EditText
-                    android:id="@+id/edtxt_lastname"
+                    android:id="@+id/edtxt_etanol"
                     android:layout_width="150dp"
                     android:layout_height="48dp"
                     android:ems="10"
                     android:importantForAutofill="no"
-                    android:inputType="text"/>
+                    android:hint="@string/txt_hint_etanol"
+                    android:inputType="numberDecimal"/>
 
             </LinearLayout>
 
@@ -63,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="70dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center_horizontal"
                 android:text="@string/txt_result"
@@ -79,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="80dp"
                 android:layout_marginEnd="16dp" >
 
                 <com.beardedhen.androidbootstrap.BootstrapButton
