--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,7 @@
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_margin="8dp"
+                    android:enabled="false"
                     android:text="@string/txt_guardar"
                     android:textAllCaps="true"
                     android:textStyle="bold"
