--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/02AppGasEta/app/src/main/res/layout/activity_gaseta.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/02AppGasEta/app/src/main/res/layout/activity_gaseta.xml
@@ -26,7 +26,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="48dp"
                 android:layout_marginEnd="16dp"
-
+                android:textColor="@color/white"
                 android:gravity="center_horizontal"
                 android:text="@string/txt_titulo"
                 android:textSize="24sp"
